# altmetric-explorer-api-client

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  example.py  getting_started.ipynb  pyproject.toml  requirements.dev.txt
altmetric/: __init__.py
altmetric/explorer/: api.py  test_api.py  test_digest.py  test_query.py
altmetric/explorer/api/: client.py  env.py  filters.py  query.py  response.py  test_api.py  test_digest.py  test_query.py  test_response.py
altmetric/explorer/api/cassettes/test_api/: test_getting_data_from_the_api[get_attention_summary].yaml  test_getting_data_from_the_api[get_demographics].yaml  test_getting_data_from_the_api[get_mention_sources].yaml  test_getting_data_from_the_api[get_mentions].yaml  test_getting_data_from_the_api[get_research_outputs].yaml  test_getting_included_from_the_api.yaml  test_getting_the_response_block_from_the_meta_block[get_attention_summary-expected_keys0].yaml  test_getting_the_response_block_from_the_meta_block[get_demographics-expected_keys1].yaml  test_getting_the_response_block_from_the_meta_block[get_mention_sources-expected_keys3].yaml  test_getting_the_response_block_from_the_meta_block[get_mentions-expected_keys4].yaml  test_getting_the_response_block_from_the_meta_block[get_research_outputs-expected_keys5].yaml
docker/: entrypoint.sh
docs/: api_client_endpoints.ipynb  getting_started.ipynb
examples/: paging.py  querying.py
utils/: decode_url.py
